styled the form

--- a/styles.css
+++ b/styles.css
@@ -64,3 +64,58 @@ footer div {
 footer a {
   color: #024e76;
 }
+
+/* hero stylin */
+section {
+  padding: 60px;
+}
+
+.hero {
+  background-image: url("/hero-bg.jpeg");
+  height: 600px;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+.hero-form {
+  color: #024e76;
+  background-color: #fce138;
+  width: 500px;
+  padding: 20px;
+  border: solid 3px #024e76;
+  position: absolute;
+  bottom: 120px;
+  right: 140px;
+}
+
+.hero-form h3 {
+  font-size: 40px;
+  margin: 0;
+}
+
+.hero-form p {
+  margin: 5px 0 15px 0;
+}
+
+.form-input {
+  border: 1px solid black;
+  display: block;
+  padding: 7px 15px;
+  font-size: 16px;
+  color: #024e76;
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+.hero-form label {
+  margin: 0 5px;
+}
+
+.hero-form button {
+  background: #024e76;
+  color: #fce138;
+  padding: 10px;
+  border: none;
+  font-size: 16px;
+}
