--- a/styles.css
+++ b/styles.css
@@ -258,3 +258,20 @@ section {
   margin: 30px 0 0 60px;
   color: white;
 }
+
+.contact-info div h3 {
+  color: #fce138;
+  font-size: 32px;
+}
+
+.contact-info p,
+.contact-info address {
+  line-height: 1.8;
+  padding: 20px 0;
+}
+
+.contact-info a {
+  color: #fce138;
+}
+
+/* REACH OUT STYLES END */
