--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@ section {
 }
 
 .hero {
-  background-image: url("/hero-bg.jpeg");
+  background-image: url("./assets/images/hero-bg.jpeg");
   height: 600px;
   background-size: cover;
   background-position: center;
