added flex to h2 elements

--- a/styles.css
+++ b/styles.css
@@ -144,16 +144,14 @@ section {
 /* Hero styles end*/
 
 /* Style the intro section*/
-.intro {
-  text-align: center;
-}
 
 .section-title {
   font-size: 55px;
   color: #024e76;
-  margin-bottom: 35px;
-  padding: 0 100px 20px 100px;
-  display: inline-block;
+  padding-bottom: 20px;
+  text-align: center;
+  margin: 0 auto 35px auto;
+  width: 50%;
   border-bottom: 3px solid;
 }
 
@@ -171,11 +169,11 @@ section {
   width: 80%;
   font-size: 20px;
   margin: 0 auto;
+  text-align: center;
 }
 
 /* Style the "what you do" section" */
 .steps {
-  text-align: center;
   background: #fce138;
 }
 
@@ -205,7 +203,6 @@ section {
 
 /* Meet the trainers style section */
 .trainers {
-  text-align: center;
 }
 
 .trainer {
@@ -251,10 +248,13 @@ section {
   text-align: right;
 }
 
+.flex-row {
+  display: flex;
+}
+
 /* Reach out section */
 .contact {
   background-color: #024e76;
-  text-align: center;
 }
 
 .reach-out h2 {
