--- a/styles.css
+++ b/styles.css
@@ -276,6 +276,7 @@ section {
 }
 
 /* Reach out section */
+
 .contact {
   background-color: #024e76;
 }
@@ -289,18 +290,23 @@ section {
 }
 
 .contact-info iframe {
-  width: 400px;
   height: 400px;
   padding-right: 40px;
 }
 
 .contact-info div {
-  width: 410px;
-  text-align: left;
-  vertical-align: top;
-  display: inline-block;
-  margin: 30px 0 0 60px;
   color: white;
+}
+
+.contact-info {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.contact-info > * {
+  flex: 1;
+  margin: 15px;
 }
 
 .contact-info div h3 {
@@ -310,12 +316,38 @@ section {
 
 .contact-info p,
 .contact-info address {
+  font-size: 16px;
   line-height: 1.8;
   padding: 20px 0;
 }
 
 .contact-info a {
   color: #fce138;
+}
+
+.contact-form input,
+.contact-form textarea {
+  border: 1px solid #024e76;
+  display: block;
+  font-size: 16px;
+  color: #024e76;
+  width: 100%;
+  margin-bottom: 15px;
+  margin-top: 5px;
+  padding: 5px;
+}
+
+.contact-form .submit {
+  background: #fce138;
+  color: #39a6b2;
+  padding: 10px 40px;
+  font-size: 20px;
+  width: 100%;
+  text-align: center;
+}
+.contact-form .submit:hover {
+  opacity: 0.9;
+  cursor: pointer;
 }
 
 /* REACH OUT STYLES END */
