--- a/styles.css
+++ b/styles.css
@@ -356,14 +356,115 @@ section {
 /* Prvacy Policy Styles */
 /* Media queries for smaller desktop screens and smaller */
 @media screen and (max-width: 980px) {
-  
+  header {
+    padding-bottom: 0;
+    justify-content: center;
+  }
+
+  header h1 {
+    width: 100%;
+    text-align: center;
+  }
+
+  header nav ul {
+    margin-top: 20px;
+  }
+
+  header nav ul li a {
+    font-size: 20px;
+  }
+
+  footer h2,
+  footer div {
+    text-align: center;
+    width: 100%;
+  }
+
+  .hero {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .hero .build-habits {
+    width: 100%;
+    text-align: center;
+  }
+  .hero-form {
+    width: 90%;
+  }
+
+  .section-title {
+    width: 80%;
+  }
+
+  .trainer {
+    flex: 0 70%;
+  }
+
+  .contact-info iframe {
+    flex: 1 100%;
   }
 }
 @media screen and (max-width: 768px) {
-  
+  section {
+    padding: 30px 15px;
+  }
+
+  .hero .build-habits,
+  .hero .hero-form {
+    width: 80%;
+  }
+
+  .flex-row {
+    width: 80%;
+    margin: 0 auto;
+  }
+
+  .step h3 {
+    flex: 1 100%;
+    text-align: center;
+  }
+
+  .step-info {
+    flex: 2 100%;
+    text-align: center;
+    justify-content: center;
+  }
+
+  .step-img {
+    flex: 0 32%;
+    margin: 15px 0 15px;
+  }
+  .step-text {
+    flex: 100%;
   }
 }
 @media screen and (max-width: 575px) {
- 
+  .hero-form button {
+    width: 100%;
+  }
+
+  .section-title {
+    width: 95%;
+  }
+
+  .intro p {
+    width: 100%;
+  }
+
+  .trainer {
+    flex: 0 100%;
+  }
+
+  .contact-info {
+    text-align: center;
+  }
+
+  .contact-info > * {
+    flex: 0 100%;
+  }
+
+  .contact-form {
+    order: 3;
   }
 }
