added pseudo elements and styled header

--- a/styles.css
+++ b/styles.css
@@ -10,15 +10,23 @@ body {
 
 /* apply styles to header*/
 header {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
   padding: 20px 35px;
   background-color: #39a6b2;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  background-image: url("./assets/images/hero-bg.jpeg");
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: 80%;
 }
 
 header h1 {
   font-weight: bold;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   font-size: 36px;
   color: #fce138;
   margin: 0;
@@ -45,6 +53,14 @@ header nav ul li a {
   padding: 10px 15px;
   font-weight: lighter;
   font-size: 1.55vw;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+header nav ul li a:hover {
+  background-color: #fce138;
+  color: #024e76;
+  border-radius: 15px;
+  text-shadow: none;
 }
 
 footer {
@@ -80,7 +96,8 @@ section {
 .hero {
   background-image: url("./assets/images/hero-bg.jpeg");
   background-size: cover;
-  background-position: center;
+  background-attachment: fixed;
+  background-position: 80%;
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -89,11 +106,13 @@ section {
 
 .hero-form {
   color: #024e76;
-  background-color: #fce138;
+  background-color: rgba(252, 225, 56, 0.8);
   padding: 20px;
   border: solid 3px #024e76;
   width: 40%;
   margin: 3.5%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  border-radius: 15px;
 }
 
 .hero .build-habits {
@@ -103,6 +122,7 @@ section {
   color: #fff;
   font-size: 18px;
   line-height: 1.2;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .build-habits h2 {
@@ -122,12 +142,19 @@ section {
 
 .form-input {
   border: 1px solid black;
+  background-color: rgba(255, 255, 255, 0.75);
   display: block;
   padding: 7px 15px;
   font-size: 16px;
   color: #024e76;
   width: 100%;
   margin-bottom: 15px;
+  border-radius: 15px;
+}
+
+.form-input:focus {
+  background-color: rgba(255, 255, 255, 1);
+  outline: none;
 }
 
 .hero-form label {
@@ -140,6 +167,11 @@ section {
   padding: 10px;
   border: none;
   font-size: 16px;
+  border-radius: 15px;
+}
+
+.hero-form button:hover {
+  background-color: #39a6b2;
 }
 
 /* Hero styles end*/
@@ -177,12 +209,17 @@ section {
 .step {
   margin: 50px auto;
   padding-bottom: 50px;
-  width: 80%;
   border-bottom: 1px solid #39a6b2;
+
+  width: 80%;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
+}
+
+.step:last-child {
+  border-bottom: none;
 }
 
 .steps {
@@ -329,6 +366,8 @@ section {
 .contact-form input,
 .contact-form textarea {
   border: 1px solid #024e76;
+  background-color: rgba(255, 255, 255, 0.75);
+
   display: block;
   font-size: 16px;
   color: #024e76;
@@ -336,8 +375,14 @@ section {
   margin-bottom: 15px;
   margin-top: 5px;
   padding: 5px;
+  border-radius: 15px;
 }
 
+.contact-form input:focus,
+.contact-form textarea:focus {
+  background-color: rgba(255, 255, 255, 1);
+  outline: none;
+}
 .contact-form .submit {
   background: #fce138;
   color: #39a6b2;
@@ -345,10 +390,11 @@ section {
   font-size: 20px;
   width: 100%;
   text-align: center;
+  border-radius: 15px;
 }
 .contact-form .submit:hover {
-  opacity: 0.9;
-  cursor: pointer;
+  color: #fce138;
+  background-color: #39a6b2;
 }
 
 /* REACH OUT STYLES END */
@@ -359,6 +405,7 @@ section {
   header {
     padding-bottom: 0;
     justify-content: center;
+    position: relative;
   }
 
   header h1 {
