--- a/assets/css/secondary-styles.css
+++ b/assets/css/secondary-styles.css
@@ -1,5 +1,6 @@
 .hero {
-  background-position: bottom;
+  background-position: center;
+  background-attachment: fixed;
   height: auto;
   text-align: center;
   margin-bottom: 40px;
