--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,12 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+:root {
+  --primary-color: #fce138;
+  --secondary-color: #024e76;
+  --tertiary-color: #39a6b2;
+}
 body {
   color: #39a6b2;
   font-family: helveitca, Arial, Helvetica, sans-serif;
@@ -10,11 +16,12 @@ body {
 
 /* apply styles to header*/
 header {
+  z-index: 9999;
   position: -webkit-sticky;
   position: sticky;
   top: 0;
   padding: 20px 35px;
-  background-color: #39a6b2;
+  background-color: var(--tertiary-color);
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -28,13 +35,13 @@ header h1 {
   font-weight: bold;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   font-size: 36px;
-  color: #fce138;
+  color: var(--primary-color);
   margin: 0;
 }
 
 header a {
   text-decoration: none;
-  color: #fce138;
+  color: var(--primary-color);
 }
 
 header nav {
@@ -57,14 +64,14 @@ header nav ul li a {
 }
 
 header nav ul li a:hover {
-  background-color: #fce138;
-  color: #024e76;
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
   border-radius: 15px;
   text-shadow: none;
 }
 
 footer {
-  background: #fce138;
+  background: var(--primary-color);
   width: 100%;
   padding: 40px 35px;
   flex-wrap: wrap;
@@ -74,7 +81,7 @@ footer {
 }
 
 footer h2 {
-  color: #024e76;
+  color: var(--secondary-color);
   font-size: 30px;
   margin: 0;
 }
@@ -85,7 +92,7 @@ footer div {
 }
 
 footer a {
-  color: #024e76;
+  color: var(--secondary-color);
 }
 
 /* hero stylin */
@@ -105,10 +112,10 @@ section {
 }
 
 .hero-form {
-  color: #024e76;
+  color: var(--secondary-color);
   background-color: rgba(252, 225, 56, 0.8);
   padding: 20px;
-  border: solid 3px #024e76;
+  border: solid 3px var(--secondary-color);
   width: 40%;
   margin: 3.5%;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
@@ -128,7 +135,7 @@ section {
 .build-habits h2 {
   font-style: italic;
   font-size: 55px;
-  color: #fce138;
+  color: var(--primary-color);
 }
 
 .hero-form h3 {
@@ -146,7 +153,7 @@ section {
   display: block;
   padding: 7px 15px;
   font-size: 16px;
-  color: #024e76;
+  color: var(--secondary-color);
   width: 100%;
   margin-bottom: 15px;
   border-radius: 15px;
@@ -162,16 +169,79 @@ section {
 }
 
 .hero-form button {
-  background: #024e76;
-  color: #fce138;
+  background: var(--secondary-color);
+  color: var(--primary-color);
   padding: 10px;
   border: none;
   font-size: 16px;
   border-radius: 15px;
 }
 
+.checkbox-wrapper input,
+.radio-wrapper input {
+  opacity: 0;
+}
+
+.checkbox-wrapper label,
+.radio-wrapper label {
+  position: relative;
+  left: 10px;
+  margin: 10px;
+  line-height: 1.6;
+}
+
+.radio-wrapper label::before {
+  border-radius: 50%;
+}
+
+.checkbox-wrapper label::before,
+.radio-wrapper label::before {
+  content: "";
+  height: 20px;
+  width: 20px;
+  background-color: rgba(255, 255, 255, 0.75);
+  border: 1px solid var(--secondary-color);
+  position: absolute;
+  top: -4.15px;
+  left: -30px;
+}
+
+.radio-wrapper label::after {
+  content: "";
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: var(--secondary-color);
+  position: absolute;
+  left: -29px;
+  top: -3px;
+  background-image: radial-gradient(circle, #39a6b2, #024e76);
+}
+
+.checkbox-wrapper label::after {
+  content: "";
+  width: 14px;
+  height: 6px;
+  border-left: 2px solid var(--secondary-color);
+  border-bottom: 2px solid var(--secondary-color);
+  position: absolute;
+  left: -26px;
+  top: 1px;
+  transform: rotate(-58deg);
+}
+
+.checkbox-wrapper input + label::after,
+.radio-wrapper input + label::after {
+  content: none;
+}
+
+.checkbox-wrapper input:checked + label::after,
+.radio-wrapper input:checked + label::after {
+  content: "";
+}
+
 .hero-form button:hover {
-  background-color: #39a6b2;
+  background-color: var(--tertiary-color);
 }
 
 /* Hero styles end*/
@@ -180,7 +250,7 @@ section {
 
 .section-title {
   font-size: 48px;
-  color: #024e76;
+  color: var(--secondary-color);
   padding-bottom: 20px;
   text-align: center;
   margin: 0 auto 35px auto;
@@ -189,16 +259,16 @@ section {
 }
 
 .primary-border {
-  border-color: #fce138;
+  border-color: var(--primary-color);
 }
 
 .secondary-border {
-  border-color: #39a6b2;
+  border-color: var(--tertiary-color);
 }
 
 .intro p {
   line-height: 1.7;
-  color: #39a6b2;
+  color: var(--tertiary-color);
   width: 80%;
   font-size: 20px;
   margin: 0 auto;
@@ -209,7 +279,7 @@ section {
 .step {
   margin: 50px auto;
   padding-bottom: 50px;
-  border-bottom: 1px solid #39a6b2;
+  border-bottom: 1px solid var(--tertiary-color);
 
   width: 80%;
   display: flex;
@@ -223,11 +293,11 @@ section {
 }
 
 .steps {
-  background: #fce138;
+  background: var(--primary-color);
 }
 
 .step h3 {
-  color: #024e76;
+  color: var(--secondary-color);
   font-size: 46px;
   flex: 1 30%;
 }
@@ -252,14 +322,14 @@ section {
   max-width: 100%;
 }
 .step-text p {
-  color: #39a6b2;
+  color: var(--tertiary-color);
   font-size: 18px;
 }
 
 .step-text h4 {
   font-size: 26px;
   line-height: 1.5;
-  color: #024e76;
+  color: var(--secondary-color);
 }
 
 /* Meet the trainers style section */
@@ -273,8 +343,8 @@ section {
 
 .trainer {
   margin: 20px;
-  background-color: #024e76;
-  color: #fce138;
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
   flex: 1;
 }
 
@@ -316,15 +386,15 @@ section {
 /* Reach out section */
 
 .contact {
-  background-color: #024e76;
+  background-color: var(--secondary-color);
 }
 
 .reach-out h2 {
-  color: #fce138;
+  color: var(--primary-color);
 }
 
 .contact h2 {
-  color: #fce138;
+  color: var(--primary-color);
 }
 
 .contact-info iframe {
@@ -348,7 +418,7 @@ section {
 }
 
 .contact-info div h3 {
-  color: #fce138;
+  color: var(--primary-color);
   font-size: 32px;
 }
 
@@ -360,17 +430,17 @@ section {
 }
 
 .contact-info a {
-  color: #fce138;
+  color: var(--primary-color);
 }
 
 .contact-form input,
 .contact-form textarea {
-  border: 1px solid #024e76;
+  border: 1px solid var(--secondary-color);
   background-color: rgba(255, 255, 255, 0.75);
 
   display: block;
   font-size: 16px;
-  color: #024e76;
+  color: var(--secondary-color);
   width: 100%;
   margin-bottom: 15px;
   margin-top: 5px;
@@ -384,8 +454,8 @@ section {
   outline: none;
 }
 .contact-form .submit {
-  background: #fce138;
-  color: #39a6b2;
+  background: var(--primary-color);
+  color: var(--tertiary-color);
   padding: 10px 40px;
   font-size: 20px;
   width: 100%;
@@ -393,8 +463,8 @@ section {
   border-radius: 15px;
 }
 .contact-form .submit:hover {
-  color: #fce138;
-  background-color: #39a6b2;
+  color: var(--primary-color);
+  background-color: var(--tertiary-color);
 }
 
 /* REACH OUT STYLES END */
