--- a/styles.css
+++ b/styles.css
@@ -464,7 +464,7 @@ section {
 }
 .contact-form .submit:hover {
   color: var(--primary-color);
-  background-color: var(--tertiary-color);
+  background-color: var(--tertiary-colorgot);
 }
 
 /* REACH OUT STYLES END */
